[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/art/naruto_uzumaki__pts___hd__by_chrisemerald_chaos_z-d51pnp1.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/CanvasLayer.gd" type="Script" id=6]
[ext_resource path="res://dodge_assets/art/narutorender25mc9.png" type="Texture" id=7]
[ext_resource path="res://scripts/MAIN.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 62.0

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -228, -282, 0, 0, 0, 0, 252, -282, 0, 0, 0, 0, -228, -282, 0, 0, 0, 0, 848, -280 )
}

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 65
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 5 )

[node name="Node" type="Node"]
script = ExtResource( 8 )
enemy_scene = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.388235, 0.0980392, 0.0980392, 1 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( 228, 282 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Score" type="Timer" parent="."]

[node name="Start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Startposition" type="Position2D" parent="."]
position = Vector2( 240, 250 )

[node name="EnemyPath" type="Path2D" parent="."]
position = Vector2( 228, 282 )
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -228, -282 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="scoreLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="Message" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -39.5
margin_right = 540.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 7 )
text = "GOA"
align = 1
autowrap = true

[node name="messageTimer" type="Timer" parent="CanvasLayer"]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -161.0
margin_top = -185.0
margin_right = 153.0
margin_bottom = -97.0
custom_fonts/font = SubResource( 8 )
text = "Start"

[node name="Enemy" parent="." groups=["enemies"] instance=ExtResource( 4 )]
position = Vector2( -122, 214 )

[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="Score" to="." method="_on_Score_timeout"]
[connection signal="timeout" from="Start" to="." method="_on_Start_timeout"]
[connection signal="start_game" from="CanvasLayer" to="." method="new_game"]
[connection signal="timeout" from="CanvasLayer/messageTimer" to="CanvasLayer" method="_on_messageTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="CanvasLayer" method="_on_Button_pressed"]
